{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 36,
  "lineage": "0c41cba4-ff22-af91-8af6-528ee87c1a21",
  "resources": [
    {
      "module": "module.backend_servers[\"web-1\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05524d6658fcf35b6",
            "arn": "arn:aws:ec2:me-central-1:212208750468:instance/i-0646a8468108f2f80",
            "associate_public_ip_address": true,
            "availability_zone": "me-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0646a8468108f2f80",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-web-1-1-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-058c9da148008202c"
              }
            ],
            "primary_network_interface_id": "eni-058c9da148008202c",
            "private_dns": "ip-10-0-10-249.me-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.249",
            "public_ip": "3.28.187.211",
            "region": "me-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f9bc3433ee085939",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a80547ecbb2cf81d",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-web-1",
              "Project": "Assignment-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-web-1",
              "Project": "Assignment-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04ecab73f1cd9ddc3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212208750468",
            "id": "i-0646a8468108f2f80",
            "region": "me-central-1"
          },
          "dependencies": [
            "data.http.my_ip",
            "module.backend_servers.aws_key_pair.instance_key",
            "module.backend_servers.data.aws_ami.amazon_linux_2023",
            "module.networking.aws_subnet.this",
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.backend_sg",
            "module.security.aws_security_group.nginx_sg"
          ]
        }
      ]
    },
    {
      "module": "module.backend_servers[\"web-2\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05524d6658fcf35b6",
            "arn": "arn:aws:ec2:me-central-1:212208750468:instance/i-043d0b83db16ae4d0",
            "associate_public_ip_address": true,
            "availability_zone": "me-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-043d0b83db16ae4d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-web-2-2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-050e829ace4be2a77"
              }
            ],
            "primary_network_interface_id": "eni-050e829ace4be2a77",
            "private_dns": "ip-10-0-10-32.me-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.32",
            "public_ip": "3.28.135.95",
            "region": "me-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09f5c948ad692a0c5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a80547ecbb2cf81d",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-web-2",
              "Project": "Assignment-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-web-2",
              "Project": "Assignment-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04ecab73f1cd9ddc3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212208750468",
            "id": "i-043d0b83db16ae4d0",
            "region": "me-central-1"
          },
          "dependencies": [
            "data.http.my_ip",
            "module.backend_servers.aws_key_pair.instance_key",
            "module.backend_servers.data.aws_ami.amazon_linux_2023",
            "module.networking.aws_subnet.this",
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.backend_sg",
            "module.security.aws_security_group.nginx_sg"
          ]
        }
      ]
    },
    {
      "module": "module.backend_servers[\"web-3\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05524d6658fcf35b6",
            "arn": "arn:aws:ec2:me-central-1:212208750468:instance/i-055b1c8b46f225f3d",
            "associate_public_ip_address": true,
            "availability_zone": "me-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055b1c8b46f225f3d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-web-3-3-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b0f82050f814cbe4"
              }
            ],
            "primary_network_interface_id": "eni-0b0f82050f814cbe4",
            "private_dns": "ip-10-0-10-117.me-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.117",
            "public_ip": "3.28.41.230",
            "region": "me-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03d15e8ce66b47db8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a80547ecbb2cf81d",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-web-3",
              "Project": "Assignment-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-web-3",
              "Project": "Assignment-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04ecab73f1cd9ddc3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212208750468",
            "id": "i-055b1c8b46f225f3d",
            "region": "me-central-1"
          },
          "dependencies": [
            "data.http.my_ip",
            "module.backend_servers.aws_key_pair.instance_key",
            "module.backend_servers.data.aws_ami.amazon_linux_2023",
            "module.networking.aws_subnet.this",
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.backend_sg",
            "module.security.aws_security_group.nginx_sg"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:212208750468:internet-gateway/igw-04a929db4aa424ee7",
            "id": "igw-04a929db4aa424ee7",
            "owner_id": "212208750468",
            "region": "me-central-1",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0d9a5bd95fa646fd5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:212208750468:route-table/rtb-09f39643bb8356027",
            "id": "rtb-09f39643bb8356027",
            "owner_id": "212208750468",
            "propagating_vgws": [],
            "region": "me-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04a929db4aa424ee7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9a5bd95fa646fd5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212208750468",
            "id": "rtb-09f39643bb8356027",
            "region": "me-central-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092e077a4a8c16580",
            "region": "me-central-1",
            "route_table_id": "rtb-09f39643bb8356027",
            "subnet_id": "subnet-0a80547ecbb2cf81d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.this",
            "module.networking.aws_subnet.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:212208750468:subnet/subnet-0a80547ecbb2cf81d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1a",
            "availability_zone_id": "mec1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a80547ecbb2cf81d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "212208750468",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "me-central-1",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-subnet"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-subnet"
            },
            "vpc_id": "vpc-0d9a5bd95fa646fd5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212208750468",
            "id": "subnet-0a80547ecbb2cf81d",
            "region": "me-central-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:212208750468:vpc/vpc-0d9a5bd95fa646fd5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fb55c3dd1771b954",
            "default_route_table_id": "rtb-0953cf3e4fd493dce",
            "default_security_group_id": "sg-0cc6bfec063de1141",
            "dhcp_options_id": "dopt-00ffe05575f320712",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d9a5bd95fa646fd5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0953cf3e4fd493dce",
            "owner_id": "212208750468",
            "region": "me-central-1",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212208750468",
            "id": "vpc-0d9a5bd95fa646fd5",
            "region": "me-central-1"
          }
        }
      ]
    },
    {
      "module": "module.nginx_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05524d6658fcf35b6",
            "arn": "arn:aws:ec2:me-central-1:212208750468:instance/i-010989d728ba10231",
            "associate_public_ip_address": true,
            "availability_zone": "me-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010989d728ba10231",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-nginx-proxy-nginx-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ca97d33173b6d7b9"
              }
            ],
            "primary_network_interface_id": "eni-0ca97d33173b6d7b9",
            "private_dns": "ip-10-0-10-122.me-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.122",
            "public_ip": "51.112.186.38",
            "region": "me-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cb707958acae6492",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a80547ecbb2cf81d",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-nginx-proxy",
              "Project": "Assignment-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-nginx-proxy",
              "Project": "Assignment-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0774123e32b873c99"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212208750468",
            "id": "i-010989d728ba10231",
            "region": "me-central-1"
          },
          "dependencies": [
            "data.http.my_ip",
            "module.networking.aws_subnet.this",
            "module.networking.aws_vpc.this",
            "module.nginx_server.aws_key_pair.instance_key",
            "module.nginx_server.data.aws_ami.amazon_linux_2023",
            "module.security.aws_security_group.nginx_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:212208750468:security-group/sg-04ecab73f1cd9ddc3",
            "description": "Allow SSH from my IP, HTTP from Nginx SG only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ecab73f1cd9ddc3",
            "ingress": [
              {
                "cidr_blocks": [
                  "20.192.21.54/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0774123e32b873c99"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-backend-sg",
            "name_prefix": "",
            "owner_id": "212208750468",
            "region": "me-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-backend-sg",
              "Project": "Assignment-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-backend-sg",
              "Project": "Assignment-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9a5bd95fa646fd5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212208750468",
            "id": "sg-04ecab73f1cd9ddc3",
            "region": "me-central-1"
          },
          "dependencies": [
            "data.http.my_ip",
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.nginx_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:212208750468:security-group/sg-0774123e32b873c99",
            "description": "Allow SSH from my IP, HTTP/S from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0774123e32b873c99",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "20.192.21.54/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-nginx-sg",
            "name_prefix": "",
            "owner_id": "212208750468",
            "region": "me-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-nginx-sg",
              "Project": "Assignment-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "prod-nginx-sg",
              "Project": "Assignment-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9a5bd95fa646fd5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "212208750468",
            "id": "sg-0774123e32b873c99",
            "region": "me-central-1"
          },
          "dependencies": [
            "data.http.my_ip",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}